Adds extensions for serverArgs, serverJVM Args, and preRunTask.